GNOME Bugzilla – Bug 770101
ges-track-element: typos in control_binding_removed signal declaration
Last modified: 2016-08-18 17:24:29 UTC
Created attachment 333574 [details] [review] patch that fixes the typos There are few typos with a nasty one in the registered signal name. ges_track_element_signals[CONTROL_BINDING_ADDED] = g_signal_new ("control-binding-added", G_TYPE_FROM_CLASS (klass), G_SIGNAL_RUN_FIRST, 0, NULL, NULL, g_cclosure_marshal_generic, G_TYPE_NONE, 1, GST_TYPE_CONTROL_BINDING);
Note that the patch is against master (and not 1.8.2 as I wanted to...)
ommit 3cf28775f32b67ff96ffc6e30233ead389377847 Author: Philippe Renon <philippe_renon@yahoo.fr> Date: Thu Aug 18 18:43:08 2016 +0200 ges-track-element: fix typos in control_binding_removed signal declaration https://bugzilla.gnome.org/show_bug.cgi?id=770101 Thanks for that, though it breaks the API I guess we do not have choice but do that change :/