ges-track-element: fix typos in control_binding_removed signal declaration

https://bugzilla.gnome.org/show_bug.cgi?id=770101